# pyprojections

./: .gitignore  CMakeLists.txt  README.md  camera.py  pyproject.toml  utils.py
.github/workflows/: python-package.yml  python-publish.yml
pyprojections/: __init__.py  _version.py  camera.py
src/: core.h  ext.cpp  project_pinhole.cpp  project_spherical.cpp
