[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyprojections"
dynamic = ["version"]
readme = "README.md"
dependencies = ["numpy"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["pyprojections/_version.py"]
cmake.build-type = "Release"


[tool.setuptools_scm]
write_to = "pyprojections/_version.py"
